// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`classes.js 1`] = `
====================================options=====================================
parsers: ["flow", "babel"]
printWidth: 80
quoteProps: "as-needed"
                                                                                | printWidth
=====================================input======================================
class A {
  a = "a"
};

class B {
  'b' = "b"
};

class C {
  c1 = "c1"
  'c2' = "c2"
};

class D {
  d1 = "d1"
  'd-2' = "d2"
};

=====================================output=====================================
class A {
  a = "a";
}

class B {
  b = "b";
}

class C {
  c1 = "c1";
  c2 = "c2";
}

class D {
  d1 = "d1";
  "d-2" = "d2";
}

================================================================================
`;

exports[`classes.js 2`] = `
====================================options=====================================
parsers: ["flow", "babel"]
printWidth: 80
quoteProps: "preserve"
                                                                                | printWidth
=====================================input======================================
class A {
  a = "a"
};

class B {
  'b' = "b"
};

class C {
  c1 = "c1"
  'c2' = "c2"
};

class D {
  d1 = "d1"
  'd-2' = "d2"
};

=====================================output=====================================
class A {
  a = "a";
}

class B {
  "b" = "b";
}

class C {
  c1 = "c1";
  "c2" = "c2";
}

class D {
  d1 = "d1";
  "d-2" = "d2";
}

================================================================================
`;

exports[`classes.js 3`] = `
====================================options=====================================
parsers: ["flow", "babel"]
printWidth: 80
quoteProps: "consistent"
                                                                                | printWidth
=====================================input======================================
class A {
  a = "a"
};

class B {
  'b' = "b"
};

class C {
  c1 = "c1"
  'c2' = "c2"
};

class D {
  d1 = "d1"
  'd-2' = "d2"
};

=====================================output=====================================
class A {
  a = "a";
}

class B {
  b = "b";
}

class C {
  c1 = "c1";
  c2 = "c2";
}

class D {
  "d1" = "d1";
  "d-2" = "d2";
}

================================================================================
`;

exports[`classes.js 4`] = `
====================================options=====================================
parsers: ["flow", "babel"]
printWidth: 80
quoteProps: "consistent"
singleQuote: true
                                                                                | printWidth
=====================================input======================================
class A {
  a = "a"
};

class B {
  'b' = "b"
};

class C {
  c1 = "c1"
  'c2' = "c2"
};

class D {
  d1 = "d1"
  'd-2' = "d2"
};

=====================================output=====================================
class A {
  a = 'a';
}

class B {
  b = 'b';
}

class C {
  c1 = 'c1';
  c2 = 'c2';
}

class D {
  'd1' = 'd1';
  'd-2' = 'd2';
}

================================================================================
`;

exports[`objects.js 1`] = `
====================================options=====================================
parsers: ["flow", "babel"]
printWidth: 80
quoteProps: "as-needed"
                                                                                | printWidth
=====================================input======================================
const a = {
  a: "a"
};

const b = {
  'b': "b"
};

const c = {
  c1: "c1",
  'c2': "c2"
};

const d = {
  d1: "d1",
  'd-2': "d2"
};

=====================================output=====================================
const a = {
  a: "a"
};

const b = {
  b: "b"
};

const c = {
  c1: "c1",
  c2: "c2"
};

const d = {
  d1: "d1",
  "d-2": "d2"
};

================================================================================
`;

exports[`objects.js 2`] = `
====================================options=====================================
parsers: ["flow", "babel"]
printWidth: 80
quoteProps: "preserve"
                                                                                | printWidth
=====================================input======================================
const a = {
  a: "a"
};

const b = {
  'b': "b"
};

const c = {
  c1: "c1",
  'c2': "c2"
};

const d = {
  d1: "d1",
  'd-2': "d2"
};

=====================================output=====================================
const a = {
  a: "a"
};

const b = {
  "b": "b"
};

const c = {
  c1: "c1",
  "c2": "c2"
};

const d = {
  d1: "d1",
  "d-2": "d2"
};

================================================================================
`;

exports[`objects.js 3`] = `
====================================options=====================================
parsers: ["flow", "babel"]
printWidth: 80
quoteProps: "consistent"
                                                                                | printWidth
=====================================input======================================
const a = {
  a: "a"
};

const b = {
  'b': "b"
};

const c = {
  c1: "c1",
  'c2': "c2"
};

const d = {
  d1: "d1",
  'd-2': "d2"
};

=====================================output=====================================
const a = {
  a: "a"
};

const b = {
  b: "b"
};

const c = {
  c1: "c1",
  c2: "c2"
};

const d = {
  "d1": "d1",
  "d-2": "d2"
};

================================================================================
`;

exports[`objects.js 4`] = `
====================================options=====================================
parsers: ["flow", "babel"]
printWidth: 80
quoteProps: "consistent"
singleQuote: true
                                                                                | printWidth
=====================================input======================================
const a = {
  a: "a"
};

const b = {
  'b': "b"
};

const c = {
  c1: "c1",
  'c2': "c2"
};

const d = {
  d1: "d1",
  'd-2': "d2"
};

=====================================output=====================================
const a = {
  a: 'a'
};

const b = {
  b: 'b'
};

const c = {
  c1: 'c1',
  c2: 'c2'
};

const d = {
  'd1': 'd1',
  'd-2': 'd2'
};

================================================================================
`;
